Added useEffect cleanup-- if component is unmounting, set subgallery style opacity to 0 so it doesn't have jagged unmounting effect anymore

--- a/src/App/Components/Gallery/Gallery.module.scss
+++ b/src/App/Components/Gallery/Gallery.module.scss
@@ -51,6 +51,20 @@
     animation: longerFade 1s both;
 }
 
+.mounted {
+    opacity: 1;
+}
+
+.unmounted {
+    opacity: 0;
+    // animation: fadeOut 1s both;
+}
+
+@keyframes fadeOut {
+    0% {opacity: 1}
+    100% {opacity: 0}
+}
+
 @keyframes longerFade {
     0% {opacity: 0}
     50% {opacity: 0}
